// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox inputProps should pass through other props to the input 1`] = `
<label
  className="root"
  htmlFor="testCheckbox"
>
  <input
    checked={false}
    className="input"
    data-automation="first-name-field"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <div
    className="label"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
      strong={false}
    >
      Still in role
    </Text>
  </div>
</label>
`;

exports[`Checkbox should render full width checkbox 1`] = `
<label
  className="root fullWidth"
  htmlFor="testCheckbox"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <div
    className="label"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
    >
      Still in role
    </Text>
  </div>
</label>
`;

exports[`Checkbox should render with checkbox put at the end of component 1`] = `
<label
  className="root rtl"
  htmlFor="testCheckbox"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <div
    className="label"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
    >
      Still in role
    </Text>
  </div>
</label>
`;

exports[`Checkbox should render with className 1`] = `
<label
  className="root testClassname"
  htmlFor="testCheckbox"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <div
    className="label"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
    >
      Still in role
    </Text>
  </div>
</label>
`;

exports[`Checkbox should render with compact checkbox style 1`] = `
<label
  className="root compact"
  htmlFor="testCheckbox"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <div
    className="label"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={true}
    >
      Still in role
    </Text>
  </div>
</label>
`;

exports[`Checkbox should render with simple props 1`] = `
<label
  className="root"
  htmlFor="testCheckbox"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <div
    className="label"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
    >
      Still in role
    </Text>
  </div>
</label>
`;

exports[`Checkbox should render with standard checkbox style 1`] = `
<label
  className="root"
  htmlFor="testCheckbox"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <div
    className="label"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
    >
      Still in role
    </Text>
  </div>
</label>
`;
